durga@48demo.com.bleadtest/src/objects/Event_Attendee_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>AS_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AttendeeSummary</label>
        <referenceTo>AttendeeSummary__c</referenceTo>
        <relationshipLabel>Event_Attendee_Mapping</relationshipLabel>
        <relationshipName>Event_Attendee_Mapping</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attendee_Event_IDs__c</fullName>
        <description>This is created for Storing Attendee ID and Event ID for Upsert</description>
        <externalId>true</externalId>
        <label>Attendee_Event_IDs</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DiversityType__c</fullName>
        <label>DiversityType</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EA_AttendeeBarcode__c</fullName>
        <label>AttendeeBarcode</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EA_isBadgePrinted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isBadgePrinted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EV_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Event_Attendee_Mapping</relationshipLabel>
        <relationshipName>Event_Attendee_Mapping</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventBriteCount__c</fullName>
        <label>EventBriteCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsPrifileUpdate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsPrifileUpdate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TicketTypes__c</fullName>
        <description>Ticket Types used  to store the selected tickets by  Event Admin, used in the  Attendee registration</description>
        <inlineHelpText>Ticket Types used  to store the selected tickets by  Event Admin, used in the  Attendee registration</inlineHelpText>
        <label>TicketTypes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Event_Attendee_Mapping</label>
    <nameField>
        <displayFormat>EA{0000000000}</displayFormat>
        <label>EA_id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event_Attendee_Mapping</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>